--- a/package.json
+++ b/package.json
@@ -28,19 +28,20 @@
     "babel-preset-stage-0": "^6.3.13",
     "classnames": "^2.2.3",
     "flux": "^2.1.1",
-    "howler": "^1.1.28",
     "http-server": "^0.8.5",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "webpack": "^1.12.10",
-    "whatwg-fetch": "^0.10.1"
+    "react-router": "^1.0.3",
+    "webpack": "^1.12.10"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
+    "history": "^1.17.0",
     "mocha": "^2.3.4",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^1.0.3",
     "standard": "^5.4.1",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.4.3",
