--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "flux": "^2.1.1",
+    "howler": "^1.1.28",
     "http-server": "^0.8.5",
     "lodash.partition": "^4.0.0",
     "lodash.sortby": "^4.0.0",
