--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "react-addons-update": "^0.14.6",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.10",
-    "whatwg-fetch": "^0.10.1"
+    "whatwg-fetch": "^0.10.1",
+    "webpack-dev-server": "^1.14.0"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
     "mocha": "^2.3.4",
     "react-hot-loader": "^1.3.0",
     "standard": "^5.4.1",
-    "webpack-dev-server": "^1.14.0"
   },
   "standard": {
     "parser": "babel-eslint"
