--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-eslint": "^5.0.0-beta6",
     "mocha": "^2.3.4",
     "react-hot-loader": "^1.3.0",
-    "standard": "^5.4.1",
+    "standard": "^5.4.1"
   },
   "standard": {
     "parser": "babel-eslint"
